form design ready

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
   		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
   		<link rel="stylesheet" href="./assets/style.css">
   		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>  		 
 
 </head>
@@ -20,7 +20,7 @@
         </div>
       </nav>
  -->
-
+<div class="navbar-fixed">
   <nav class="z-depth-6 the-top-nav">
     <div class="nav-wrapper n_bg">
     <div class="nav-ico-left-pad">
@@ -33,9 +33,8 @@
       </ul>
     </div>
     </div>
-   </nav>
   <nav class="second-nav">
-    <div class="nav-wrapper blue z-depth-6" >	
+    <div class="nav-wrapper blue z-depth-6" > 
       <form class="" autocomplete="off">
         <div class="input-field">
           <input id="search" type="search" placeholder="Search color" class="auto-instant" >
@@ -45,7 +44,10 @@
       </form>
     </div>
   </nav>
-<main >
+   </nav>
+  
+  </div>
+<main style="margin-top: 60px;">
 	<div class="container">
 
 	      <div class="row" id="mainData">
