--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -35,9 +35,9 @@
     </div>
   <nav class="second-nav">
     <div class="nav-wrapper blue z-depth-6" > 
-      <form class="" autocomplete="off">
+      <form id="searchform" autocomplete="off">
         <div class="input-field">
-          <input id="search" type="search" placeholder="Search color" class="auto-instant" >
+          <input id="searchText" type="search" placeholder="Search color ( Try Dark Orange or Blue Green  )" class="auto-instant" >
           <label for="search"><i class="material-icons">search</i></label>
           <i class="material-icons">close</i>
         </div>
@@ -63,6 +63,9 @@
 			 -->
 
 	      </div>  
+        <div id="noResults" class="white z-depth-1" style="padding: 10px;">
+          <h5>Sorry. No Rangoli found for this color.</h5>
+        </div>
 	      <div align="center" id="loading">
 	      	
 	      <div class="active big preloader-wrapper"><div class="spinner-layer spinner-blue"><div class="circle-clipper left"><div class=circle></div></div><div class=gap-patch><div class=circle></div></div><div class="circle-clipper right"><div class=circle></div></div></div><div class="spinner-layer spinner-red"><div class="circle-clipper left"><div class=circle></div></div><div class=gap-patch><div class=circle></div></div><div class="circle-clipper right"><div class=circle></div></div></div><div class="spinner-layer spinner-yellow"><div class="circle-clipper left"><div class=circle></div></div><div class=gap-patch><div class=circle></div></div><div class="circle-clipper right"><div class=circle></div></div></div><div class="spinner-layer spinner-green"><div class="circle-clipper left"><div class=circle></div></div><div class=gap-patch><div class=circle></div></div><div class="circle-clipper right"><div class=circle></div></div></div></div>
