squre img bug fix

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -64,7 +64,7 @@
 
 	      </div>  
         <div id="noResults" class="white z-depth-1" style="padding: 10px;">
-          <h5>Sorry. No Rangoli found for this color.</h5>
+          <h5>Sorry. No more Rangoli found for this color.</h5>
         </div>
 	      <div align="center" id="loading">
 	      	
