--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -9,7 +9,29 @@
   		
 		  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>  		 
+      <style type="text/css">
 
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+.gr_1{
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both infinite;
+}
+        </style>
 </head>
 <body >
 	<div class="bg-main-back"></div>
@@ -25,8 +47,10 @@
     <div class="nav-wrapper n_bg">
     <div class="nav-ico-left-pad">
       <a href="#!" class="brand-logo no_fi"><i class="material-icons">wb_sunny</i>My Rangoli</a>
+
       <ul class="right hide-on-med-and-down">
-       <!--  <li><a href="sass.html"><i class="material-icons">search</i></a></li>
+       <li class="gr_1"><a href="apply.html" class="btn blue waves-effect waves-dark">Participate in Contest</h5></a></li>
+       <!--  
         <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
         <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
         <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li> -->
